compiler/tests/fixtures/invalid/semantics/selector_initiator_not_direct.viv
// Invalid: selector initiator binding is not a direct reference

reserved action respond:
    roles:
        @responder:
            as: initiator

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        respond:
            with partial:
                @responder: @actor.friend
        ;
        wave;
